@@ -1,3 +1,7 @@
+2011-09-30  Valek Filippov
+
+		* XLS: parse CellXF part of XF record.
+
 2011-09-29  Valek Filippov
 
 		* FH: XForm parsing based on flags
